2004-06-04  JP Rosevear  <jpr@novell.com>

	* gui/dialogs/task-page.c (task_page_fill_widgets): guard
	against the text value being NULL

	* gui/dialogs/event-page.c (event_page_fill_widgets): add guards
	here as well
	
2004-06-03  Jeffrey Stedfast  <fejj@novell.com>

	* conduits/calendar/calendar-conduit.c
	(calconduit_load_configuration): If the last_uri string value is
	the Evolution 1.4 URI, change it to the new URI. Fixes bug #54134.

2004-06-03  Rodrigo Moya <rodrigo@novell.com>

	Fixes #59481
	
	* gui/e-tasks.c (set_status_message): don't use vsprintf with
	NULL strings, crashes on FreeBSD.

2004-06-03  Rodrigo Moya <rodrigo@novell.com>

	* gui/dialogs/comp-editor-page.c
	(comp_editor_page_notify_client_changed): update the internal client
	when it changes.

2004-06-03  Rodrigo Moya <rodrigo@novell.com>

	Fixes #56875

	* gui/dialogs/event-editor.c (event_editor_construct): connect to
	"client_changed" signal on the EventPage.
	(client_changed_cb): set menu sensibility when the client changes.

	* gui/dialogs/task-editor.c (task_editor_construct): connect to
	"client_changed signal on the TaskPage.
	(client_changed_cb): set menu sensibility when the client changes.

2004-06-02  JP Rosevear  <jpr@novell.com>
	
	* gui/alarm-notify/alarm-notify.c (process_removal_in_hash): free
	the correct uri, preventing bad memory corruption
	(list_changed_cb): track the removals in a list so we don't
	clobber the hash table data during the foreach loop

2004-06-02  Chris Toshok  <toshok@ximian.com>

	* gui/migration.c (migrate_calendars): remove absolute_uri from
	ESource's.
	(migrate_tasks): same.

2004-06-02  Rodrigo Moya <rodrigo@novell.com>

	* gui/e-meeting-list-view.c (start_addressbook_server): removed
	pre-completion code, not needed anymore.
	(emlv_finalize): no need to unref the book anymore.
	(emlv_init): don't call start_addressbook_server.

	* gui/dialogs/copy-source-dialog.c (copy_source): fixed
	leak and pass the correct icalcomponent to e_cal_modify_object.
